--- a/UT/UT.csproj
+++ b/UT/UT.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementation\TargetLocalDoc.cs" />
+    <Compile Include="Implementation\SourceWebDoc.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
