--- a/MechanismDocMailMerge/MechanismDocMailMerge.csproj
+++ b/MechanismDocMailMerge/MechanismDocMailMerge.csproj
@@ -47,9 +47,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MailMergeOpenXml.cs" />
+    <Compile Include="MailMerge\Contract\ISourceDoc.cs" />
+    <Compile Include="MailMerge\Contract\ITargetDoc.cs" />
+    <Compile Include="MailMerge\MailMergeOpenXml.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
