--- a/UT/UT.csproj
+++ b/UT/UT.csproj
@@ -33,7 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementation\SharePointTargetLocalDoc.cs" />
     <Compile Include="Implementation\TargetLocalDoc.cs" />
     <Compile Include="Implementation\SourceWebDoc.cs" />
     <Compile Include="Program.cs" />
