--- a/MechanismDocMailMerge/MechanismDocMailMerge.csproj
+++ b/MechanismDocMailMerge/MechanismDocMailMerge.csproj
@@ -33,8 +33,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DocumentFormat.OpenXml">
-      <HintPath>..\ShareDlls\DocumentFormat.OpenXml.dll</HintPath>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.0.5022.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ShareDlls\2.5\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -51,6 +52,7 @@
     <Compile Include="MailMerge\Contract\ITargetDoc.cs" />
     <Compile Include="MailMerge\DocPropertiey.cs" />
     <Compile Include="MailMerge\MailMergeOpenXml.cs" />
+    <Compile Include="MailMerge\UtilityFiller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
