--- a/server/WcfService/Web.config
+++ b/server/WcfService/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
 
   <appSettings>
@@ -9,6 +9,14 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="Guardian.Menta.MentaServicesLibrary.WordService.WordService">
+        <endpoint address="basic" binding="basicHttpBinding" bindingConfiguration=""
+          contract="Guardian.Menta.MentaServicesLibrary.WordService.IWordService" />
+        <endpoint binding="webHttpBinding" bindingConfiguration="" name="json"
+          contract="Guardian.Menta.MentaServicesLibrary.WordService.IWordService" />
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
         <behavior>
