config wcf ... /WordService.svc/ping/1

--- a/server/WcfService/Web.config
+++ b/server/WcfService/Web.config
@@ -10,20 +10,23 @@
   </system.web>
   <system.serviceModel>
     <services>
-      <service name="Guardian.Menta.MentaServicesLibrary.WordService.WordService">
+      <service behaviorConfiguration="merge" name="Guardian.Menta.MentaServicesLibrary.WordService.WordService">
         <endpoint address="basic" binding="basicHttpBinding" bindingConfiguration=""
-          contract="Guardian.Menta.MentaServicesLibrary.WordService.IWordService" />
-        <endpoint binding="webHttpBinding" bindingConfiguration="" name="json"
-          contract="Guardian.Menta.MentaServicesLibrary.WordService.IWordService" />
+          name="basic" contract="Guardian.Menta.MentaServicesLibrary.WordService.IWordService" />
+        <endpoint behaviorConfiguration="JsonBehavior" binding="webHttpBinding"
+          bindingConfiguration="" name="json" contract="Guardian.Menta.MentaServicesLibrary.WordService.IWordService" />
       </service>
     </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="JsonBehavior">
+          <webHttp helpEnabled="true" />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+        <behavior name="merge">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
