--- a/MechanismDocMailMerge/MechanismDocMailMerge.csproj
+++ b/MechanismDocMailMerge/MechanismDocMailMerge.csproj
@@ -51,6 +51,7 @@
     <Compile Include="MailMerge\Contract\ISourceDoc.cs" />
     <Compile Include="MailMerge\Contract\ITargetDoc.cs" />
     <Compile Include="MailMerge\DocPropertiey.cs" />
+    <Compile Include="MailMerge\Contract\IMailMergeOpenXml.cs" />
     <Compile Include="MailMerge\MailMergeOpenXml.cs" />
     <Compile Include="MailMerge\UtilityFiller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
