--- a/MechanismDocMailMerge/MechanismDocMailMerge.csproj
+++ b/MechanismDocMailMerge/MechanismDocMailMerge.csproj
@@ -48,6 +48,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Excel\SpreedsheetHelper.cs" />
     <Compile Include="MailMerge\Contract\ISourceDoc.cs" />
     <Compile Include="MailMerge\Contract\ITargetDoc.cs" />
     <Compile Include="MailMerge\DocPropertiey.cs" />
